feat: Add GPU monitoring metrics (GSMM compliance)
- Add GPU usage metrics: utilization %, memory, temperature, power
- Implement src/measurement/gpu_monitor.py using pynvml
- Integrate GPU monitoring into MetricsCollector
- Add GPU configuration to measurement_config.yaml
- Update requirements.txt with pynvml and gpustat
- Add test script: scripts/test_gpu_monitoring.py
- Update README with 11 metrics (8 base + 3 GPU)
- System gracefully degrades when GPU not available

Hardware target: NVIDIA RTX 4090 on server
GSMM reference: GPU usage as critical energy indicator

--- a/configs/measurement_config.yaml
+++ b/configs/measurement_config.yaml
@@ -34,3 +34,11 @@ paths:
   raw_measurements: "data/raw/measurements"
   logs: "data/raw/logs"
   processed: "data/processed"
+
+gpu:
+  enabled: true                      # Enable GPU monitoring
+  sampling_interval: 0.1             # GPU sampling interval (seconds)
+  track_memory: true                 # Track GPU memory usage
+  track_temperature: true            # Track GPU temperature
+  track_power: true                  # Track GPU power draw
+  device_index: 0                    # GPU device to monitor (0 = first GPU)
