fix: Add git fetch before checkout for unreachable commits + reduce repetitions to 3

--- a/configs/measurement_config.yaml
+++ b/configs/measurement_config.yaml
@@ -1,7 +1,7 @@
 # Measurement Configuration for SWE-Perf Extended
 
 measurement:
-  repetitions: 3                    # Number of times to repeat each test
+  repetitions: 3                     # Number of times to repeat each test
   sampling_interval_ms: 100          # Sample metrics every 100ms
   baseline_duration_sec: 5.0         # Duration of baseline measurement
   min_test_duration_sec: 5.0         # Minimum test duration for accurate measurement
@@ -9,14 +9,7 @@ measurement:
 energy:
   tool: codecarbon                   # Energy measurement tool
   measure_power_secs: 0.1            # Power sampling interval
-  tracking_mode: process             # Options: process, machineDear Aitor,
-
-Thank you very much for the invitation to participate in the second mentor session. Unfortunately, the Hydrapolis team, consisting of myself and Diego Terzi, will not be able to attend due to commitments with our university that prevent us from following the session.
-
-We truly appreciate your support and hope to collaborate in the future.
-
-Best regards,
-Giacomo Colosio
+  tracking_mode: process             # Options: process, machine
   log_level: error                   # Reduce codecarbon verbosity
   save_to_file: false                # Don't auto-save, we handle it
 
@@ -28,7 +21,6 @@ resources:
 
 carbon:
   grid_intensity_default: 450        # Default: EU average (gCO₂e/kWh)
-  # Override with specific country if known
   country_iso_code: null             # e.g., "ESP", "FRA", "USA"
 
 output:
