--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,5 @@ tiktoken>=0.5.0    # Token counting OpenAI
 # GPU Monitoring (NVIDIA)
 pynvml>=11.5.0
 gpustat>=1.1.1
+pandas>=2.0.0
+requests>=2.28.0
